@@ -1,3 +1,14 @@
+2010-12-01  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclBasic.c: fix gcc 64-bit warnings: cast from pointer to
+	* generic/tclHash.c:  integer of different size.
+	* generic/tclTest.c:
+	* generic/tclThreadTest.c:
+	* generic/tclStrToD.c: fix gcc(-4.5.2) warning: 'static' is not at
+	beginning of declaration.
+	* generic/tclPanic.c:  Allow Tcl_Panic() to enter the debugger on win32
+	* generic/tclCkalloc.c: use Tcl_Panic() in stead of duplicating the code.
+
 2010-11-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclInt.decls, generic/tclInt.h, generic/tclIntDecls.h:
